fixed whitespace on the right

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,22 +6,17 @@ File Name: styles.css
 */
 
 /* CSS Reset */
-/*body, header, nav, main, footer, img, h1, h2, h3, ul {
+body, header, nav, main, footer, img, h1, h2, h3, ul, {
     margin: 0;
     padding: 0;
     border: 0;
-}*/
+}
 
 /* Style rules for body and images*/
 body {
     background: color #e9e9e9;
     font-family: 'Sono', sans-serif;
 }
-
-/*img {
-    height: 100px;
-    max-width: 100%;
-}*/
 
 /* Style rules for skip navigation link */
 .skip {
@@ -71,10 +66,6 @@ nav li a {
     margin: 0 auto;
 }*/
 
-main p {
-    font-size: 1.25em;
-}
-
 h3 {
     font-size: 2rem;
     font-weight: bold;
@@ -88,10 +79,6 @@ h3 {
     font-size: 3rem;
     font-family: 'Pacifico', cursive;
     margin-bottom: 2rem;
-}
-
-.container {
-    margin: 50px;
 }
 
 a {
@@ -109,7 +96,6 @@ hr {
 }
 
 .featured {
-
     height: 200px;
     width: 300px;
 }
@@ -138,9 +124,6 @@ img.zoom {
     -ms-transition: all .3s ease-in-out;
 }
 
-.code-link {
-    color: #E42D9F;
-}
 
 .button {
     margin: 5% auto 5%;
@@ -154,7 +137,6 @@ img.zoom {
     text-align: center;
 
 }
-
 
 /* Style rules for footer content */
 footer {
